Fix possum align

--- a/src/_includes/components/header.css
+++ b/src/_includes/components/header.css
@@ -34,13 +34,10 @@
 	}
 }
 .elv-nav-menu {
-	padding-left: 1rem;
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-	margin-left: auto;
-	margin-right: auto;
+	padding: 1rem;
+	margin-inline: auto;
 }
-@media (min-width: 55em) {
+@media (min-width: 58.125em) { /* 930px */
 	.elv-nav-menu.elv-nav-menu {
 		flex-wrap: nowrap;
 		white-space: nowrap;
@@ -72,16 +69,6 @@
 	max-width: none;
 }
 
-/* Make room for the possum */
-.elv-nav-menu {
-	padding-right: 1rem;
-}
-@media (min-width: 34.4375em) and (max-width: 74.9375em) {
-	/* 551px–1199px */
-	.elv-header-docs .elv-nav-menu {
-		padding-right: 4em;
-	}
-}
 /* Sticky, #2col × 600px */
 @media (min-width: 41.4375em) and (min-height: 43.75em) {
 	/* Take care with the sticky toc too */
